# Demonstrator

./: .clang-format  .code-checks.sh  .gitattributes  .gitignore  .setup.sh  .system-setup.sh  CMakeLists.txt  README.md  Vagrantfile
applications/: CMakeLists.txt  attitudeSensors.cpp  commandline.cpp  commandline.hpp  distanceIndicators.cpp  distanceSensors.cpp  extensionSensors.cpp  linearActuator.cpp  linearActuators.cpp  network.cpp  robot.cpp  robot.hpp  servoControllers.cpp  stewartPlatform.cpp
applications/calibration/: attitudeSensors.cpp  extensionSensors.cpp
applications/demonstration/: demonstrateMouse3d.cpp  endEffector.cpp  evasion.cpp  motors.cpp  mouse3d.cpp  script.cpp  sensors.cpp
applications/maintaince/: attitudeSensors.cpp  distanceIndicators.cpp  distanceSensors.cpp  extensionSensors.cpp  linearActuators.cpp  servoControllers.cpp  stewartPlatform.cpp
applications/maintenance/: attitudeSensors.cpp  distanceIndicators.cpp  distanceSensors.cpp  extensionSensors.cpp  linearActuators.cpp  mouse3dSensors.cpp  network.cpp  servoControllers.cpp  stewartPlatform.cpp
applications/model/: README.md  actuatorsMaximalLength.config
applications/model/firstLevel/: actualMeasuredExtensions_sensor0.mat  actualMeasuredExtensions_sensor1.mat  actualMeasuredExtensions_sensor2.mat  actualMeasuredExtensions_sensor3.mat  actualMeasuredExtensions_sensor4.mat  actualMeasuredExtensions_sensor5.mat  actuatorsMaximalLength.config  actuatorsMinimalLength.config  distanceSensorsPosition.config  endEffectorJointsRelativePosition.config  expectedMeasuredExtensions_sensor0.mat  expectedMeasuredExtensions_sensor1.mat  expectedMeasuredExtensions_sensor2.mat  expectedMeasuredExtensions_sensor3.mat  expectedMeasuredExtensions_sensor4.mat  expectedMeasuredExtensions_sensor5.mat  extensionSensors.correction
applications/model/fourthLevel/: actualMeasuredExtensions_sensor0.mat  actualMeasuredExtensions_sensor1.mat  actualMeasuredExtensions_sensor2.mat  actualMeasuredExtensions_sensor3.mat  actualMeasuredExtensions_sensor4.mat  actualMeasuredExtensions_sensor5.mat  actuatorsMaximalLength.config  actuatorsMinimalLength.config  expectedMeasuredExtensions_sensor0.mat  expectedMeasuredExtensions_sensor1.mat  expectedMeasuredExtensions_sensor2.mat  expectedMeasuredExtensions_sensor3.mat  expectedMeasuredExtensions_sensor4.mat  expectedMeasuredExtensions_sensor5.mat  extensionSensors.calibration  extensionSensors.correction
applications/model/secondLevel/: actualMeasuredExtensions_sensor0.mat  actualMeasuredExtensions_sensor1.mat  actualMeasuredExtensions_sensor2.mat  actualMeasuredExtensions_sensor3.mat  actualMeasuredExtensions_sensor4.mat  actualMeasuredExtensions_sensor5.mat  actuatorsMaximalLength.config  actuatorsMinimalLength.config  baseJointsPosition.config  expectedMeasuredExtensions_sensor0.mat  expectedMeasuredExtensions_sensor1.mat  expectedMeasuredExtensions_sensor2.mat  expectedMeasuredExtensions_sensor3.mat  expectedMeasuredExtensions_sensor4.mat  expectedMeasuredExtensions_sensor5.mat  extensionSensors.calibration  extensionSensors.correction
applications/model/thirdLevel/: actualMeasuredExtensions_sensor0.mat  actualMeasuredExtensions_sensor1.mat  actualMeasuredExtensions_sensor2.mat  actualMeasuredExtensions_sensor3.mat  actualMeasuredExtensions_sensor4.mat  actualMeasuredExtensions_sensor5.mat  actuatorsMaximalLength.config  actuatorsMinimalLength.config  baseJointsPosition.config  expectedMeasuredExtensions_sensor0.mat  expectedMeasuredExtensions_sensor1.mat  expectedMeasuredExtensions_sensor2.mat  expectedMeasuredExtensions_sensor3.mat  expectedMeasuredExtensions_sensor4.mat  expectedMeasuredExtensions_sensor5.mat  extensionSensors.calibration  extensionSensors.correction
cmake/: FindCatch.cmake  FindDemonstrator.cmake  FindWiringPi.cmake
include/: demonstrator
include/demonstrator_bits/: assert.hpp  attitudeSensors.hpp  config.hpp  config.hpp.cmake  distanceIndicators.hpp  distanceSensors.hpp  extensionSensors.hpp  gpio.hpp  i2c.hpp  linearActuators.hpp  mantella.hpp  mouse3d.hpp  network.hpp  pin.hpp  sensors.hpp  servoControllers.hpp  spi.hpp  stewartPlatform.hpp  uart.hpp
include/demonstrator_bits/sensors/: attitudeSensors.hpp  distanceSensors.hpp  extensionSensors.hpp  mouse3d.hpp  mouse3dSensors.hpp
model/: actuatorsMinimalLength.mat  endEffectorJointsRelativePosition.config
src/: assert.cpp  attitudeSensors.cpp  config.cpp  distanceIndicators.cpp  distanceSensors.cpp  extensionSensors.cpp  gpio.cpp  i2c.cpp  linearActuators.cpp  mantella.cpp  mouse3d.cpp  network.cpp  pin.cpp  sensors.cpp  servoControllers.cpp  spi.cpp  stewartPlatform.cpp  uart.cpp
src/sensors/: attitudeSensors.cpp  distanceSensors.cpp  extensionSensors.cpp  mouse3d.cpp  mouse3dSensors.cpp
test/: catchExtension.cpp  catchExtension.hpp  main.cpp  testAssert.cpp  testConfig.cpp  testGpio.cpp
